Bug 1006834 - Part 1: DOM: Handle dial error and re-order code to avoid multi-thread issue. r=hsinyi, a=1.4+